--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,16 @@ android {
             keyPassword 'android'
         }
     }
+       signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
+    }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
