--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
+    "axios": "^0.22.0",
     "formik": "^2.2.9",
     "i": "^0.3.7",
     "react": "17.0.2",
@@ -39,6 +40,7 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "yup": "^0.32.9"
   },
