--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "i": "^0.3.7",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-animated-progress": "^1.0.1",
     "react-native-confirmation-code-field": "^7.1.0",
+    "react-native-date-picker": "^4.1.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-linear-gradient": "^2.5.6",
