naviagtion function done

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
