--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-text-gradient": "^0.1.7",
     "react-native-timeline-flatlist": "^0.7.6",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-wheel-picker-android": "^2.0.6",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
