--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-anchor-carousel": "^4.0.1",
     "react-native-animated-progress": "^1.0.1",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-date-picker": "^4.1.0",
@@ -40,6 +41,7 @@
     "react-native-text-gradient": "^0.1.7",
     "react-native-timeline-flatlist": "^0.7.6",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-wheel-pick": "^1.1.1",
     "react-native-wheel-picker-android": "^2.0.6",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
